# apt-registry-explorer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  data.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: quality.yml  regenerate-screenshot.yml  test.yml
examples/: demo.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_edc2ba894e08fe8a___init___py.html  z_edc2ba894e08fe8a__meta_py.html  z_edc2ba894e08fe8a_cli_py.html  z_edc2ba894e08fe8a_discovery_py.html  z_edc2ba894e08fe8a_packages_py.html  z_edc2ba894e08fe8a_sources_py.html  z_edc2ba894e08fe8a_tui_py.html
scripts/: capture_tui_screenshot.py
tests/: test_cli.py  test_cli_solid_classes.py  test_coverage_boost.py  test_discovery.py  test_edge_cases_comprehensive.py  test_init.py  test_integration.py  test_packages.py  test_sources.py  test_tui_comprehensive.py
tests/fixtures/: packages_file.txt  release_file.txt
