[project]
name = "apt-registry-explorer"
description = "A Python utility to validate and explore APT registry endpoints without root access"
readme = "README.md"
dynamic = ["version"]
authors = [
    {name = "Jamie-BitFlight"}
]
maintainers = [
    {name = "Jamie-BitFlight"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
keywords = [
    "apt",
    "debian",
    "ubuntu",
    "package-manager",
    "repository",
    "dpkg",
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "httpx>=0.27.0",
    "textual>=0.40.0",
    "typer>=0.21.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.9.4",
    "hatchling>=1.14.0",
    "hatch-vcs>=0.5.0",
    "mypy>=1.18.2",
    "basedpyright>=1.33.0",
    "poethepoet>=0.32.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
apt-registry-explorer = "apt_registry_explorer.cli:app"

[project.urls]
Homepage = "https://github.com/Jamie-BitFlight/apt-registry-explorer"
Repository = "https://github.com/Jamie-BitFlight/apt-registry-explorer"
Issues = "https://github.com/Jamie-BitFlight/apt-registry-explorer/issues"

[tool.ruff]
target-version = "py311"
fix = true
unsafe-fixes = true
line-length = 100
src = ["packages", "tests"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
line-ending = "lf"
skip-magic-trailing-comma = true
preview = true

[tool.ruff.lint]
preview = true
extend-select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "D",     # pydocstyle
    "E",     # error
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "N",     # pep8-naming
    "PERF",  # perflint
    "PGH",   # pygrep-hooks
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # ruff
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TC",    # flake8-type-checking
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # warning
    "YTT",   # flake8-2020
]
ignore = [
    "ANN401",  # Any type is needed for generic metadata handling
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "E501",    # line-too-long (handled by formatter)
    "PLR0913", # too-many-arguments (acceptable for complex APIs)
    "PLR0917", # too-many-positional-arguments
    "S404",    # subprocess possibly insecure (needed for system operations)
    "S603",    # subprocess without shell=True (intentional for security)
    "TRY003",  # long error messages are acceptable
]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S",      # Security checks not needed in tests
    "D",      # Docstring requirements relaxed for tests
    "E501",   # Line length relaxed for test data
    "ANN",    # Type annotations optional for test fixtures/methods
    "PLR2004", # Magic values acceptable in tests
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
pretty = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "test.*",
    "tests.*",
]
disable_error_code = [
    "attr-defined",
    "call-arg",
    "var-annotated",
]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnnecessaryTypeIgnoreComment = "error"
reportPrivateImportUsage = true
reportImplicitRelativeImport = false
include = ["**/packages"]
extraPaths = ["**/packages", "**/tests"]
ignore = ["**/tests"]

[tool.pytest.ini_options]
addopts = [
    "--cov=apt_registry_explorer",
    "--cov-report=term-missing",
    "-v",
    "-n",
    "auto",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [".", "packages/apt-registry-explorer/src"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests against real repositories",
]

[tool.coverage.run]
omit = [
    "**/tests/*",
    "**/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 70  # Target coverage - comprehensive tests needed for SOLID architecture classes

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "packages/apt-registry-explorer",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/apt-registry-explorer/src/apt_registry_explorer"]

[tool.hatch.build.targets.wheel.sources]
"packages/apt-registry-explorer/src/apt_registry_explorer" = "apt_registry_explorer"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "packages/apt-registry-explorer/src/apt_registry_explorer/_version.py"

# =============================================================================
# Poe the Poet - Task Runner Configuration
# =============================================================================
[tool.poe]
poetry_command = ""

[tool.poe.tasks]
# Formatting
format = { cmd = "ruff format packages/apt-registry-explorer/src tests/", help = "Format code with ruff" }
format-check = { cmd = "ruff format --check packages/apt-registry-explorer/src tests/", help = "Check code formatting" }

# Linting
lint = { cmd = "ruff check packages/apt-registry-explorer/src tests/", help = "Run ruff linter" }
lint-fix = { cmd = "ruff check --fix packages/apt-registry-explorer/src tests/", help = "Run ruff linter with auto-fix" }

# Type checking
mypy = { cmd = "mypy packages/apt-registry-explorer/src --show-error-codes --pretty", help = "Run mypy type checker" }
pyright = { cmd = "basedpyright packages/apt-registry-explorer/src", help = "Run basedpyright type checker" }
typecheck = { sequence = ["mypy", "pyright"], help = "Run all type checkers" }

# Testing
test = { cmd = "pytest", help = "Run all tests with coverage" }
test-unit = { cmd = "pytest -m 'not integration'", help = "Run unit tests only (no network)" }
test-integration = { cmd = "pytest -m integration", help = "Run integration tests only" }
test-fast = { cmd = "pytest -x -q --no-cov", help = "Run tests quickly (stop on first failure, no coverage)" }

# Pre-commit
pre-commit-install = { cmd = "pre-commit install", help = "Install pre-commit hooks" }
pre-commit-run = { cmd = "pre-commit run --all-files", help = "Run pre-commit on all files" }

# Combined commands
check = { sequence = ["format-check", "lint", "typecheck"], help = "Run all code quality checks" }
fix = { sequence = ["format", "lint-fix"], help = "Auto-fix formatting and linting issues" }
all = { sequence = ["fix", "typecheck", "test"], help = "Format, lint, typecheck, and test" }

# CLI shortcuts
cli = { cmd = "apt-registry-explorer", help = "Run the apt-registry-explorer CLI" }
cli-help = { cmd = "apt-registry-explorer --help", help = "Show CLI help" }
